About para o blog.

--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -1,4 +1,5 @@
 <section>
   <h1>About Me</h1>
-  <p>A little something about me.</p>
+  <p>Desenvolvedor de software apaixonado por tecnologia.</p>
+  <p>Atualmente trabalho na <a href="http://globo.com" target="_blank">globo.com</a> construindo a plataforma de busca.</p>
 </section>
