Novo post sobre segurança no elasticsearch.

--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -1,5 +1,6 @@
 <section>
   <h1>About Me</h1>
   <p>Desenvolvedor de software apaixonado por tecnologia.</p>
-  <p>Atualmente trabalho na <a href="http://globo.com" target="_blank">globo.com</a> construindo a plataforma de busca.</p>
+  {% img left /images/eu.jpg 130 178 %}
+  <p>Atualmente trabalho na <a href="http://globo.com" target="_blank">globo.com</a> construindo a plataforma de busca.</p><br>
 </section>
